# HOLDWallet

./: .gitignore  00_COMECE_AQUI.md  00_PRODUCTION_SETUP_README.txt  2FA_IMPLEMENTATION_SUMMARY.md  2FA_INTEGRATION_FINAL.md  2FA_MANDATORY_IMPLEMENTATION.md  2FA_TRANSACTION_INTEGRATION.md  ACAO_IMEDIATA_TRANSFBANK.md  ADDRESS_VALIDATION_COMPLETE.md  ADMIN_2FA_MANDATORY.md  ADMIN_BILL_PAYMENT_COMPLETE.md  ADMIN_BILL_PAYMENT_SPECS.md  ADMIN_MODULE_CHECKLIST.md  ADMIN_PRODUCAO_CHECKLIST.md  AI_INTELLIGENCE_COMPLETE.md  AI_MODULE_IMPLEMENTATION_SUMMARY.md  AMBIENTES_RESULTADO_FINAL.md  ANALISE_AMBIENTES_DATABASE.md  ANALISE_BANCO_PRODUCAO.md  ANALISE_DROPLET_REQUISITOS.md  ANALISE_GATEWAYS_PIX.md  ANALISE_ROTAS_API_COMPLETA.md  API_WOLKNOW_CHECKLIST_COMPLETO.md  ARQUITETURA_DATA_AGGREGATOR.md  ATIVAR_ICONES_VSCODE.md  ATIVAR_PIX_BB_CHECKLIST.md  AUDIO_MESSAGE_PRESS_AND_HOLD.md  AUDIO_RECORDER_FEATURE.md  AUDIO_RECORDER_QUICK_TEST.md  AUDIO_VIDEO_TESTING.md  AUDITORIA_BACKEND_COMPLETA.md  AUDITORIA_RESUMO_VISUAL.md  AUTH_TOKEN_FIX.md  AUTOMACAO_OTC_COMPLETA.md  AUTO_LOAD_BALANCES.md  AUTO_QUOTE_FEATURE.md  AUTO_QUOTE_IMPLEMENTATION.md  BACKEND_FIX_PYTHON39.md  BACKEND_ROUTE_TESTING.md  BACKEND_STARTUP_FIX.md  (+551 more)
Frontend/: .env  .env.development  .env.example  .env.local  .env.production  .eslintrc.json  .prettierrc.json  ARCHITECTURE.md  DASHBOARD_SALDO_REAL.md  INSTALL_QRCODE.md  INSTANT_TRADE_UPDATE.md  README.md  REDEPLOY_TRIGGER.txt  TRADER_PROFILE_COMPONENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
backend/: .env.example  .env.production  .gitignore  CHECKLIST_BACKEND.sh  Procfile  QUICKSTART.md  README.md  RELATORIO_COBERTURA_MOEDAS.py  RESTAURACAO_COMPLETA.md  START_SERVER.md  (+122 more)
sdks/wolkpay-python/: README.md  pyproject.toml
sdks/wolkpay-python/wolkpay/: __init__.py  client.py  exceptions.py  types.py
sdks/wolkpay-python/wolkpay/resources/: __init__.py  payments.py  webhooks.py
(+684 files in other folders)
